[project]
name = "pynts"
version = "0.1.0"
description = "A light-weight python library to compute tuning scores for neuroscientific data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.2.0",
    "numpy>=2.2.6",
    "opencv-python-headless>=4.11.0.86",
    "pathos>=0.3.4",
    "pynapple>=0.10.3",
    "scikit-image>=0.25.2",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and pycodestyle (`E`) codes, plus import-related (`I`) checks.
select = ["E", "F", "I"]

# Ignore these rules globally
ignore = [
    "E501",  # line too long (handled by line-length setting)
    "F401",  # unused imports (we often have them in notebooks or during development)
]

# All fixable rules can be auto-fixed
fixable = ["ALL"]

# No rules are explicitly unfixable (optional)
unfixable = []

# Allow unused variables when prefixed with underscore
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
